--- a/index.html
+++ b/index.html
@@ -238,14 +238,14 @@
         </div>
     </section>
 
-    <aside class="bg-dark">
+<!--     <aside class="bg-dark">
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Free Download at Start Bootstrap!</h2>
                 <a href="#" class="btn btn-default btn-xl wow tada">Download Now!</a>
             </div>
         </div>
-    </aside>
+    </aside> -->
 
     <section id="contact">
         <div class="container">
@@ -253,7 +253,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">¡Contáctanos!</h2>
                     <hr class="primary">
-                    <p>¿Deseas coolaborar con nosotros o estás interesado en desarrollar un proyecto con el Laboratorio?</p>
+                    <p>¿Deseas colaborar con nosotros o estás interesado en desarrollar un proyecto con el Laboratorio?</p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x wow bounceIn"></i>
