--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
+                    <h2 class="section-heading">Conócenos</h2>
                     <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+                    <p class="text-faded">El Laboratorio se creó desde 1997 y a lo largo de su existencia se ha participado en diversas competencias. Se creó a cargo del Dr. Jesús Savage como un espacio donde los alumnos podían poner en práctica sus conocimientos formados en cursos de Sistemas Digitales, lo que permitió la participación en el Concurso Metropolitano de Robótica a partir de 1999. En el 2003 se creó formalmente el equipo Eagle Knights, a cargo del Dr. Alfredo Weitzenfeld, con quien se participó en torneos abiertos regionales. A partir del 2005 se ha calificado en varias ocasiones dentro de la categoría Small Size League en el Torneo Mundial RoboCup, obteniendo así en 2007 el séptimo lugar. Desde el 2010 el equipo está a cargo del Dr. Marco Morales.</p>
                     <a href="#" class="btn btn-default btn-xl">Get Started!</a>
                 </div>
             </div>
