Cambio del Moto

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>Laboratorio de Robótica ITAM</h1>
+                <h1>Lab. de Robótica @ ITAM</h1>
                 <hr>
-                <p>El laboratorio de Robótica del ITAM desarrolla proyectos de investigación en Robótica, Agentes e Inteligencia.</p>
+                <p>Un espacio de desarrollo de proyectos de investigación en Robótica, Agentes e Inteligencia Artificial.</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Conocer más...</a>
             </div>
         </div>
