--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
                     <h2 class="section-heading">Conócenos</h2>
                     <hr class="light">
 					<h3 class="section-heading">Un poco de historia...</h3>
-                    <p class="text-faded">El Laboratorio se creó desde 1997 y a lo largo de su existencia se ha participado en diversas competencias. 
+                    <p class="text-faded">
+					<div align="left">El Laboratorio se creó desde 1997 y a lo largo de su existencia se ha participado en diversas competencias. </div>
 					<br><br>Se creó a cargo del Dr. Jesús Savage como un espacio donde los alumnos podían poner en práctica sus conocimientos formados en cursos de Sistemas Digitales, lo que permitió la participación en el Concurso Metropolitano de Robótica a partir de 1999. 
 					<br><br>En el 2003 se creó formalmente el equipo Eagle Knights, a cargo del Dr. Alfredo Weitzenfeld, con quien se participó en torneos abiertos regionales.
 					<br><br>A partir del 2005 se ha calificado en varias ocasiones dentro de la categoría Small Size League en el Torneo Mundial RoboCup, obteniendo así en 2007 el séptimo lugar. 
