--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
 					<div align="justify">A partir del 2005 se ha calificado en varias ocasiones dentro de la categoría Small Size League en el Torneo Mundial RoboCup, obteniendo así en 2007 el séptimo lugar. </div>
 					<br>
 					<div align="justify">Desde el 2010 el equipo está a cargo del Dr. Marco Morales.</div></p>
+					<hr class="light">
+					<h3 class="section-heading">Algunos logros</h3>
                     <a href="#" class="btn btn-default btn-xl">Get Started!</a>
                 </div>
             </div>
