--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+                <img src="img/logo_eagle_knights.png" alt="Logo Eagle Knights" height="42" width="42">
                 <a class="navbar-brand page-scroll" href="#page-top">Eagle Knights</a>
             </div>
-
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
@@ -77,7 +77,8 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>Lab. de Robótica @ ITAM</h1>
+                <h1>Eagle Knights</h1>
+                <h2>Lab. de Robótica @ ITAM</h2>
                 <hr>
                 <p>Un espacio de desarrollo de proyectos de investigación en Robótica, Agentes e Inteligencia Artificial.</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Conocer más...</a>
